--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
+  flutter_local_notifications: ^19.4.0
+  timezone: ^0.10.1
+  shared_preferences: ^2.5.3
+  mockito: ^5.5.0
 
 dev_dependencies:
   flutter_test:
