algumas alterações no backend e testes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   timezone: ^0.10.1
   shared_preferences: ^2.5.3
   mockito: ^5.5.0
+  build_runner: ^2.6.0
 
 dev_dependencies:
   flutter_test:
