--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.5.3
   mockito: ^5.5.0
   build_runner: ^2.6.0
+  firebase_app_check: ^0.4.0
 
 dev_dependencies:
   flutter_test:
